- changed `SecurityConfig` to accept all requests, - changed API interface of file-service - created common interface for object storage services `StorageService` - modified `S3Service` to follow `StorageService` rules