@@ -1,51 +1,52 @@
 package com.jilnash.fileservice.service;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.io.InputStreamResource;
-import org.springframework.core.io.Resource;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import software.amazon.awssdk.core.ResponseInputStream;
 import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.*;
 
-import java.nio.ByteBuffer;
-import java.util.Objects;
+import java.io.IOException;
+
+import static software.amazon.awssdk.core.sync.RequestBody.fromBytes;
 
 @Service
-public class S3Service {
+@RequiredArgsConstructor
+public class S3Service implements StorageService {
 
-    @Autowired
-    private S3Client s3;
+    private final S3Client s3;
 
-    public void putFileToS3(MultipartFile file, String bucketName) throws Exception {
+    @Override
+    public String putFile(String bucketName, String fileName, MultipartFile file) throws IOException {
 
-        CreateBucketRequest createBucketRequest = CreateBucketRequest.builder()
-                .bucket(bucketName)
-                .build();
-
-        s3.createBucket(createBucketRequest);
-
-        PutObjectRequest putObjectRequest = PutObjectRequest.builder()
-                .bucket(bucketName)
-                .key(String.format("audio.%s", Objects.requireNonNull(file.getContentType()).split("/")[1]))
-                .build();
-
-        s3.putObject(
-                putObjectRequest,
-                software.amazon.awssdk.core.sync.RequestBody.fromByteBuffer(ByteBuffer.wrap(file.getBytes()))
+        s3.createBucket(
+                CreateBucketRequest.builder()
+                        .bucket(bucketName)
+                        .build()
         );
 
+        s3.putObject(
+                PutObjectRequest.builder()
+                        .bucket(bucketName)
+                        .key(fileName)
+                        .build()
+                ,
+                fromBytes(file.getBytes())
+        );
+
+        return file.getOriginalFilename();
     }
 
-    public Resource getFileFromS3(String bucketName) {
+    @Override
+    public byte[] getFile(String bucketName, String fileName) throws IOException {
 
         ListObjectsV2Request listObjectsV2Request = ListObjectsV2Request.builder()
                 .bucket(bucketName)
                 .maxKeys(1)
                 .build();
 
-        S3Object firstObject = s3.listObjectsV2(listObjectsV2Request).contents().get(0);
+        S3Object firstObject = s3.listObjectsV2(listObjectsV2Request).contents().getFirst();
 
         GetObjectRequest getObjectRequest = GetObjectRequest.builder()
                 .bucket(bucketName)
@@ -54,6 +55,6 @@ public class S3Service {
 
         ResponseInputStream<GetObjectResponse> object = s3.getObject(getObjectRequest);
 
-        return new InputStreamResource(object);
+        return object.readAllBytes();
     }
 }
